--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,21 +1,19 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '7'
+- '10'
 cairo:
 - '1.16'
-cdt_name:
-- cos6
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '7'
-docker_image:
-- condaforge/linux-anvil-comp7
+- '10'
 expat:
 - '2.2'
 fontconfig:
@@ -32,6 +30,8 @@ libpng:
 - '1.6'
 libtiff:
 - 4.1.0
+macos_machine:
+- x86_64-apple-darwin13.4.0
 pango:
 - '1.42'
 pin_run_as_build:
@@ -58,7 +58,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 target_platform:
-- linux-64
+- osx-64
 xz:
 - '5.2'
 zip_keys:
