--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,6 +3,7 @@
 # {% set version = "3.0.5" %}
 {% set version = "3.1.3" %}
 {% set major_minor_version = '.'.join(version.split('.')[:2]) %}
+{% set version_no_string = version | replace(".", "") %} 
 
 package:
   name: wxwidgets
@@ -58,14 +59,8 @@ requirements:
     - pango       # [unix]
     - cairo       # [unix]
     - fontconfig  # [unix]
-    # old version not available for windows
-    # https://github.com/conda-forge/conda-forge-pinning-feedstock/pull/627
     - gdk-pixbuf  # [unix]
-    # gtk3 3.24.18 seems to report it is 3.24.17
-    # https://github.com/conda-forge/gtk3-feedstock/issues/11
-    - gtk3 !=3.24.18  # [unix]
-    # libglu seems necessary for osx too
-    # https://github.com/conda-forge/libglu-feedstock/pull/17
+    - gtk3        # [unix]
     - libglu       # [linux]
     - mesalib      # [unix]
     - xorg-libx11  # [linux]
@@ -86,12 +81,11 @@ test:
     - wxrc --help  # [unix]
     - where wxrc   # [win]
     - if not exist %LIBRARY_BIN%\\wxrc.exe exit 1  # [win]
-    - if not exist %LIBRARY_BIN%\\wxmsw313u_xrc_vc_x64_custom.dll exit 1  # [win]
-
+    - if not exist %LIBRARY_BIN%\\wxmsw{{ version_no_dot }}u_xrc_vc_x64_custom.dll exit 1  # [win]
 
 about:
   home: https://www.wxwidgets.org/
-  license: Other
+  license: LicenseRef-wxWindows
   license_family: LGPL
   license_file:
     - docs/licence.txt
