--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,7 +3,7 @@
 # {% set version = "3.0.5" %}
 {% set version = "3.1.3" %}
 {% set major_minor_version = '.'.join(version.split('.')[:2]) %}
-{% set version_no_string = version | replace(".", "") %} 
+{% set version_no_dot = version | replace(".", "") %}
 
 package:
   name: wxwidgets
