--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,3 @@
-# 3.0.5 doesn't ship with CMake installer
-# And I don't feel like copying files manually from the VS Solution build
-# {% set version = "3.0.5" %}
 {% set version = "3.1.3" %}
 {% set major_minor_version = '.'.join(version.split('.')[:2]) %}
 {% set version_no_dot = version | replace(".", "") %}
@@ -11,14 +8,12 @@ package:
 
 source:
   url: https://github.com/wxWidgets/wxWidgets/releases/download/v{{ version }}/wxWidgets-{{ version }}.tar.bz2
-  # 3.0.5
-  # sha256: 8aacd56b462f42fb6e33b4d8f5d40be5abc3d3b41348ea968aa515cc8285d813
-  # 3.1.3
   sha256: fffc1d34dac54ff7008df327907984b156c50cff5a2f36ee3da6052744ab554a
 
 build:
-  number: 1
-  # OSX Still doesn't work
+  number: 2
+  # OSX Still doesn't work, see https://github.com/conda-forge/wxwidgets-feedstock/pulls
+  skip: true  # [osx]
   run_exports:
     # ABI seems to be stable between minor versions
     - {{ pin_subpackage('wxwidgets', max_pin='x.x') }}
@@ -75,8 +70,10 @@ requirements:
 
 test:
   commands:
-    - test -f ${PREFIX}/lib/libwx_baseu-{{ major_minor_version }}${SHLIB_EXT}  # [linix]
-    - test -f ${PREFIX}/lib/libwx_baseu-{{ version }}.0.0${SHLIB_EXT}  # [linix]
+    - test -f ${PREFIX}/lib/libwx_baseu-{{ major_minor_version }}${SHLIB_EXT}  # [linux]
+    # Not sure why OSX is adding these extra modifiers to SHLIB
+    # This is the reason why we aren't including the OSX package in conda-forge just yet.
+    # - test -f ${PREFIX}/lib/libwx_baseu-{{ version }}.0.0${SHLIB_EXT}          # [osx]
     - test -f ${PREFIX}/include/wx-{{ major_minor_version }}/wx/wx.h           # [unix]
     - wx-config --prefix  # [unix]
     - wxrc --help  # [unix]
